--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -3,7 +3,7 @@ build:
   version: "1.0"
 
 loans:
-  message: "Welcome to DEKANBANK loans related production APIs"
+  message: "Welcome to DEKANBANK loans related prod APIs"
   contactDetails:
     name: "Mustafa KILIÇ - Developer"
     email: "mustafa.kilic@gmail.com"
